Tweaks to project to try and fix flex layout issues, and apply effects

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,20 @@
 :root {
     --background-primary: #DDD;
     --background-secondary: #ABC;
+    --background-highlight: #5b179b;
     --foreground-primary: #3C3C3C;
+    --foreground-highlight: #FFF;
 }
 
 /* Centre text in the header and footer regions as opposed to centring with flex */
 header, footer {
     text-align: center;
     margin: 2rem;
+}
+
+header p {
+    width: 80vw;
+    justify-self: center;
 }
 
 header h1 {
@@ -29,16 +36,25 @@ body {
 main {
     flex-wrap: wrap;
     justify-content: center;
+    /* gap: 2em 1em;
+    margin-left: 1em;
+    margin-right: 1em; */
+}
+
+div {
+    box-sizing: border-box;
+    padding: 0 1rem 1rem 1rem;
+    flex: 1 0 30vw;
+    position: relative;
+    outline: dashed 2px var(--foreground-primary);
+    margin: 1em;
 }
 
 /* Set snippet blocks to not shrink, grow, base width 1/3rd of page. Prime for absolutely-positioned items */
 article {
-    box-sizing: border-box;
-    padding: 0 1rem 1rem 1rem;
-    flex: 1 1 30%;
-    position: relative;
-    border: dashed 2px var(--foreground-primary);
-    margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 /* Create a floating header over the info cards */
@@ -49,14 +65,26 @@ article h2 {
     padding: 0 0.3rem;
     border: solid 2px var(--foreground-primary);
     border-radius: 5px;
+    z-index: 2;
+}
+
+div, article > h2 {
+    transition-property: box-shadow;
+    transition-duration: 0.3s;
+    box-shadow: 0 0 0 0 #5b179b00;
+}
+
+div :hover, article > h2 :hover {
+    box-shadow: 0 0 5px 1px var(--background-highlight);
 }
 
 article p, article code {
     font-size: 10pt;
+    box-shadow: none !important;
 }
 
-article p {
-    padding: 0.5rem 0;
+article p, article pre {
+    padding: 0.5em;
 }
 
 article code {
@@ -65,6 +93,13 @@ article code {
 
 pre {
     background-image: linear-gradient(#DDD, #ABC);
+    flex-grow: 1;
+    user-select: all;
+}
+
+pre ::selection {
+    background-color: var(--background-highlight);
+    color: var(--foreground-highlight);
 }
 
 @media screen and (max-width: 768px) {
